--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -1,1 +1,18 @@
 /* test */
+
+.image {
+  width: 200px;
+  position: relative;
+  left: 20px;
+}
+
+.chart {
+  width: 100px;
+  height: 100px;
+}
+
+.circ1 {
+  stroke: green;
+  fill: white;
+  stroke-width: 5;
+}
